--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   http: ^0.13.5
+  flutter_launcher_icons: ^0.12.0
+  animate_do: ^3.0.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
