--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   animate_do: ^3.0.2
   intl: ^0.18.1
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
