--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animate_do: ^3.0.2
   intl: ^0.18.1
   flutter_spinkit: ^5.1.0
+  google_maps_flutter: ^2.2.8
 
 dev_dependencies:
   flutter_test:
